# Cobra-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  checks.yml
hook/: Cargo.toml
hook/src/: absolution.rs  config.rs  dinput8.rs  glacier.rs  lib.rs  sniper.rs
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: competition.rs  competitionscore.rs  contract.rs  contractscore.rs  lib.rs  message.rs  play.rs  prelude.rs  queue.rs  rating.rs  sniperscore.rs  storyscore.rs  target.rs  tutorialscore.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230725_022027_create_competition_table.rs  m20230725_022027_create_competitionscore_table.rs  m20230725_022027_create_contract_table.rs  m20230725_022027_create_contractscore_table.rs  m20230725_022027_create_message_table.rs  m20230725_022027_create_play_table.rs  m20230725_022027_create_queue_table.rs  m20230725_022027_create_rating_table.rs  m20230725_022027_create_sniperscore_table.rs  m20230725_022027_create_storyscore_table.rs  m20230725_022027_create_target_table.rs  m20230725_022027_create_tutorialscore_table.rs  m20230725_022027_create_user_table.rs
server/src/: main.rs
